--- a/index.html
+++ b/index.html
@@ -2,14 +2,23 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Class o 1991 (Hogwarts)</title>
 </head>
 
 <body>
+    <main class="studentlist">
+        <template>
+        <article class="person">
+          <h1 class="studentname">NAME GOES HERE</h1>
+          <p class="studenthouse">JOBTITILE</p>
+        </article>
+      </template>
+    </main>
 
+    <script src="script.js"></script>
 </body>
 
 </html>
