--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer></script>
     <title>Class o 1991 (Hogwarts)</title>
 </head>
 
@@ -14,11 +16,17 @@
         <article class="person">
           <h1 class="studentname">NAME GOES HERE</h1>
           <p class="studenthouse">JOBTITILE</p>
+          <button>More information</button>
         </article>
       </template>
     </main>
 
-    <script src="script.js"></script>
+    <div class="modal-background hide">
+        <div class="modal-content">
+            <h3 class="modal-name">NAME</h3>
+            <p class="modal-description">LONG DESCRIPTION</p>
+        </div>
+    </div>
 </body>
 
 </html>
