Final changes (almost)

--- a/index.html
+++ b/index.html
@@ -6,19 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
+    <link href="https://fonts.googleapis.com/css?family=News+Cycle|Oswald:700&display=swap" rel="stylesheet">
     <script src="script.js" defer></script>
     <title>Class o 1991 (Hogwarts)</title>
 </head>
 
 <body>
+    <h1>Class of 1991</h1>
     <main class="studentlist">
         <template>
-        <article class="person">
-          <h1 class="studentname">NAME GOES HERE</h1>
-          <p class="studenthouse">JOBTITILE</p>
-          <button>More information</button>
-        </article>
-      </template>
+            <article class="person">
+                <h1 class="studentname">NAME GOES HERE</h1>
+                <button type="button" class="button">More information</button>
+            </article>
+        </template>
     </main>
 
     <div class="modal-background hide">
