--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 </head>
 
 <body>
-    <h1>Class of 1991</h1>
+    <div class="title">
+        <h1>Class of 1991</h1>
+        <h3>Hogwarts School of Witchcraft and Wizardry</h3>
+    </div>
     <main class="studentlist">
         <template>
             <article class="person">
