--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </template>
     </main>
 
-    <div id="modalito" class="modal-background hide">
+    <div id="modalito" class="modal-background hide" data-theme="">
         <div class="modal-content">
             <h3 class="modal-name">NAME</h3>
             <p class="modal-description">LONG DESCRIPTION</p>
